fix collapse error

--- a/src/styles/_panel.scss
+++ b/src/styles/_panel.scss
@@ -109,6 +109,10 @@
   text-decoration: none;
   color: #333;
 }
+.nav-side-menu li img {
+  width: 20px;
+  height: 20px;
+}
 .nav-side-menu li a:hover {
   text-decoration: none;
   color: #1182c5;
